--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
             <button class="close-button">&times;</button>
             <h2 class="modal-title">Заголловок</h2>
             <p class="modal-subtitle">Описание</p>
-            <a href="" target="_blank" class="link-github">Проект на GitHub</a>
-            <a href="" target="_blank" class="link-project">Запустить проект</a>
+
+            <div class="links-wraper">
+                <a href="" target="_blank" class="link-github">Проект на GitHub</a>
+                <a href="" target="_blank" class="link-project">Запустить проект</a>
+            </div>
         </div>
     </div>
 
